--- a/springLessons/i18n/pom.xml
+++ b/springLessons/i18n/pom.xml
@@ -6,25 +6,17 @@
         <artifactId>springLessons</artifactId>
         <groupId>cn.pxl</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>resource</artifactId>
+    <artifactId>i18n</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-
     <dependencies>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.11.0</version>
-        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
